--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: cadetblue;
+    background-color: rgb(100, 150, 160);
     display: flex;
     justify-content: center;
     align-items: center;
